--- a/odh-dashboard/overlays/service-mesh/patches/deployment-patch.yaml
+++ b/odh-dashboard/overlays/service-mesh/patches/deployment-patch.yaml
@@ -6,8 +6,8 @@
 - op: remove
   path: /spec/template/spec/volumes
 
-# add istio inject label
-- op: add
-  path: /spec/template/metadata/annotations
-  value:
-    sidecar.istio.io/inject: "true"
+# # add istio inject label
+# - op: add
+#   path: /spec/template/metadata/annotations
+#   value:
+#     sidecar.istio.io/inject: "true"
