--- a/odh-dashboard/overlays/service-mesh/patches/deployment-patch.yaml
+++ b/odh-dashboard/overlays/service-mesh/patches/deployment-patch.yaml
@@ -7,7 +7,7 @@
   path: /spec/template/spec/volumes
 
 # add istio inject label
-- op: add
-  path: /spec/template/metadata/annotations
-  value:
-    sidecar.istio.io/inject: "true"
+# - op: add
+#   path: /spec/template/metadata/annotations
+#   value:
+#     sidecar.istio.io/inject: "true"
