--- a/odh-dashboard/base/kustomization.yaml
+++ b/odh-dashboard/base/kustomization.yaml
@@ -27,7 +27,7 @@ images:
 - name: odh-dashboard
   ## FIXME: Temporary until odh-dashboard PR is merged upstream
   newName: quay.io/maistra-dev/odh-dashboard
-  newTag: ossm_annotations
+  newTag: check-flag-0c1eb618
 - name: oauth-proxy
   newName: registry.redhat.io/openshift4/ose-oauth-proxy
   newTag: v4.8
